docs(deep-dive): drop duplicated tutorial, restructure around benchmarks only
DEEP_DIVE.md was carrying a full copy of the README's Highlights,
ten-second example, Change-detection example, Deferred structural
edits example, Project layout, Build + requirements, and License
sections — all of which now live in the README alone. Removed them.

Also:
  - Added a Contents section at the top so readers can jump to the
    benchmark / analysis section they actually came for.
  - Added an explicit Methodology section (was buried in the old
    "Benchmark results" wrapper) covering hardware, JMH config, and
    stock vs Valhalla JVM setup.
  - Promoted every former h3 benchmark subsection (Iteration, NBody,
    Particle, Sparse delta, Realistic tick, Valhalla, Write-path tax,
    Speed-up matrix) to h2 now that the "Benchmark results" wrapper
    is gone.
  - Moved "Why so many ceremony-like params?" above the reproduction
    commands so the analytical flow reads top-to-bottom: benchmarks
    -> Valhalla -> write-path tax -> speed-up summary -> API
    rationale -> reproduction.
  - Expanded the reproduction section to include the Valhalla sweep
    commands and the --add-exports flags, plus the opt-in system
    properties (-Dzzuegg.ecs.useFlatStorage / debugFlat).

Result: DEEP_DIVE 539 lines (was 655), all analysis. README is the
only document that teaches the API.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>